v1.11.x/connectors/dashboard/tableau/yaml.mdx
---
title: Run the Tableau Connector Externally
description: Configure Tableau dashboard connections in OpenMetadata using YAML. Step-by-step guide for seamless data catalog integration and metadata extraction.
sidebarTitle: Run Externally
mode: "wide"
---
import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import { CodePreview, ContentPanel, ContentSection, CodePanel } from '/snippets/components/CodePreview.jsx'
import WorkflowConfigDef from '/snippets/connectors/yaml/workflow-config-def.mdx'
import SourceConfig from '/snippets/connectors/yaml/dashboard/source-config.mdx'
import IngestionSink from '/snippets/connectors/yaml/ingestion-sink.mdx'
import WorkflowConfig from '/snippets/connectors/yaml/workflow-config.mdx'
import IngestionCli from '/snippets/connectors/yaml/ingestion-cli.mdx'
import PythonRequirements from '/snippets/connectors/python-requirements.mdx'
import ExternalIngestionDeployment from '/snippets/v1.11.x/connectors/external-ingestion-deployment.mdx'

<ConnectorDetailsHeader
icon='/public/images/connectors/tableau.webp'
name="Tableau"
stage="PROD"
availableFeatures={["Dashboards", "Charts", "Lineage", "Owners", "Datamodels", "Tags", "Projects", "Column Lineage", "Usage"]}
unavailableFeatures={[]} />
In this section, we provide guides and references to use the Tableau connector.

<Info>
**Supported Authentication Types:**
- **Basic Auth** — Username and password authentication
- **Access Token Auth** — Personal access token name and secret for token-based authentication
</Info>

Configure and schedule Tableau metadata and profiler workflows from the OpenMetadata UI:
- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
- [Enable Security](#securing-tableau-connection-with-ssl-in-openmetadata)
<ExternalIngestionDeployment />
## Requirements
To ingest tableau metadata, minimum `Site Role: Viewer` is required for the tableau user.
To create lineage between tableau dashboard and any database service via the queries provided from Tableau Metadata API, please enable the Tableau Metadata API for your tableau server.
For more information on enabling the Tableau Metadata APIs follow the link [here](https://help.tableau.com/current/api/metadata_api/en-us/docs/meta_api_start.html)
<Tip>
- If using a **default site** on Tableau Server, leave the **Site Name** fields **blank** in the ingestion configuration.
- Ensure that the **Metadata API** is enabled for the user performing the ingestion. If it is not enabled, ingestion may fail. Follow the official Tableau documentation to [enable the Metadata API](https://help.tableau.com/current/api/metadata_api/en-us/docs/meta_api_start.html#enable-the-tableau-metadata-api-for-tableau-server).
</Tip>
<Tip>
- As of OpenMetadata versions `1.7.4` and `1.7.5`, the `siteUrl` field has been removed from the Tableau connector configuration. This change was intentional, as confirmed in the release commit.
- To connect to a non-default Tableau site, use the `siteName` field instead. The Tableau Python SDK does not require `siteUrl` for authentication.
- Ensure the `siteName` field is correctly populated (do not use `*`) to enable successful metadata ingestion for multi-site Tableau environments.
</Tip>
### Python Requirements
<PythonRequirements />
To run the Tableau ingestion, you will need to install:
```bash
pip3 install "openmetadata-ingestion[tableau]"
```
## Metadata Ingestion
All connectors are defined as JSON Schemas.
[Here](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/entity/services/connections/dashboard/tableauConnection.json)
you can find the structure to create a connection to Tableau.
In order to create and run a Metadata Ingestion workflow, we will follow
the steps to create a YAML configuration able to connect to the source,
process the Entities if needed, and reach the OpenMetadata server.
The workflow is modeled around the following
[JSON Schema](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/metadataIngestion/workflow.json)
### 1. Define the YAML Config

<CodePreview>

<ContentPanel>

<ContentSection id={1} title="Source Configuration" lines="1-3">

Configure the source type and service name for your Tableau connector.

</ContentSection>

<ContentSection id={2} title="Authentication" lines="4">

**For Basic Authentication:**

**Username**: The name of the user whose credentials will be used to sign in.

**Password**: The password of the user.

</ContentSection>

<ContentSection id={3} title="Host Port" lines="13">

**hostPort**: URL or IP address of your installation of Tableau Server.

</ContentSection>

<ContentSection id={4} title="Site Name" lines="14">

**siteName**: Tableau Site Name. This corresponds to the `contentUrl` attribute in the Tableau REST API. The `site_name` is the portion of the URL that follows the `/site/` in the URL.

</ContentSection>

<ContentSection id={5} title="Pagination Limit" lines="15">

**paginationLimit**: The pagination limit will be used while querying the Tableau Graphql endpoint to get the data source information. Default is `10`.

</ContentSection>

<ContentSection id={6} title="API Version" lines="16">

**apiVersion**: Tableau API version. If not provided, the version will be used from the Tableau server automatically. A list of versions can be found [here](https://help.tableau.com/current/api/rest_api/en-us/REST/rest_api_concepts_versions.htm).

</ContentSection>

<ContentSection id={7} title="Proxy URL" lines="17">

**proxyURL**: Optional proxy URL for the Tableau server. If not provided, the hostPort will be used. This is used to generate the dashboard and chart URLs.

</ContentSection>

<ContentSection id={8} title="SSL Configuration" lines="18">

**verifySSL**: Client SSL verification. Make sure to configure the SSLConfig if enabled. Supported values `no-ssl`, `ignore`, `validate`.

**sslConfig**: Client SSL configuration.

</ContentSection>

<ContentSection id={9} title="Source Config" lines="31-73">

The `sourceConfig` is defined [here](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/metadataIngestion/dashboardServiceMetadataPipeline.json):

- **dbServiceNames**: Database Service Names for ingesting lineage if the source supports it.
- **dashboardFilterPattern**, **chartFilterPattern**, **dataModelFilterPattern**: Note that all of them support regex as include or exclude. E.g., "My dashboard, My dash.*, .*Dashboard".
- **projectFilterPattern**: Filter the tableau dashboards, charts and data sources by projects. Note that all of them support regex as include or exclude. E.g., "My project, My proj.*, .*Project".
- **includeOwners**: Set the 'Include Owners' toggle to control whether to include owners to the ingested entity if the owner email matches with a user stored in the OM server as part of metadata ingestion. If the ingested entity already exists and has an owner, the owner will not be overwritten.
- **includeTags**: Set the 'Include Tags' toggle to control whether to include tags in metadata ingestion.
- **includeDataModels**: Set the 'Include Data Models' toggle to control whether to include tags as part of metadata ingestion.
- **markDeletedDashboards**: Set the 'Mark Deleted Dashboards' toggle to flag dashboards as soft-deleted if they are not present anymore in the source system.

</ContentSection>

<ContentSection id={10} title="Source Config" lines="31-73">

<SourceConfigDef />

</ContentSection>

<ContentSection id={11} title="Sink Configuration" lines="74-76">

To send the metadata to OpenMetadata, it needs to be specified as `type: metadata-rest`.

</ContentSection>

<ContentSection id={12} title="Workflow Configuration" lines="77-93">

<WorkflowConfigDef />

</ContentSection>

</ContentPanel>

<CodePanel fileName="tableau_config.yaml">

```yaml
source:
  type: tableau
  serviceName: local_tableau
  serviceConnection:
    config:
      type: Tableau
      # authType:
      #   username: username
      #   password: password
      # authType:
      #   personalAccessTokenName: personal_access_token_name
      #   personalAccessTokenSecret: personal_access_token_secret
      hostPort: http://localhost  # REQUIRED - Tableau Server URL
      siteName: site_name
      # apiVersion: "3.15"  # Optional - auto-detected from server if not provided
      paginationLimit: 10
      # proxyURL: http://proxy.example.com  # Optional - used for dashboard/chart URL generation
      # verifySSL: no-ssl
      # sslMode: disable
      # sslConfig:
      #   caCertificate: |
      #     -----BEGIN CERTIFICATE-----
      #     sample certificate
      #     -----END CERTIFICATE-----
      #   sslCertificate: |
      #     -----BEGIN CERTIFICATE-----
      #     sample certificate
      #     -----END CERTIFICATE-----
      #   sslKey: |
      #     -----BEGIN PRIVATE KEY-----
      #     sample certificate
      #     -----END PRIVATE KEY-----
```

<SourceConfig />

<IngestionSink />

<WorkflowConfig />

</CodePanel>

</CodePreview>

### Example Source Configurations for default and non-default tableau sites
#### 1. Sample config for default tableau site
For a default tableau site the `siteName` field should be kept empty as shown in the below config.
```yaml
source:
  type: tableau
  serviceName: local_tableau
  serviceConnection:
    config:
      type: Tableau
      # For Tableau, choose one of basic or access token authentication
      # # For basic authentication
      # authType:
      #   username: username
      #   password: password
      # # For access token authentication
      # authType:
      #   personalAccessTokenName: personal_access_token_name
      #   personalAccessTokenSecret: personal_access_token_secret
      hostPort: http://localhost
      siteName: site_name
  sourceConfig:
    config:
      type: DashboardMetadata
      includeOwners: True
      markDeletedDashboards: True
      includeTags: True
      includeDataModels: True
      # lineageInformation:
      #   dbServiceNames:
      #     - service1
      #     - service2
      # dashboardFilterPattern:
      #   includes:
      #     - dashboard1
      #     - dashboard2
      #   excludes:
      #     - dashboard3
      #     - dashboard4
      # chartFilterPattern:
      #   includes:
      #     - chart1
      #     - chart2
      #   excludes:
      #     - chart3
      #     - chart4
      # dataModelFilterPattern:
      #   includes:
      #     - datamodel1
      #     - datamodel2
      #   excludes:
      #     - datamodel3
      #     - datamodel4
sink:
  type: metadata-rest
  config: {}
workflowConfig:
  # loggerLevel: DEBUG  # DEBUG, INFO, WARN or ERROR
  openMetadataServerConfig:
    hostPort: <OpenMetadata host and port>
    authProvider: <OpenMetadata auth provider>
```
#### 2. Sample config for non-default tableau site
For a non-default tableau site the `siteName` field is required.
**Note**: If `https://xxx.tableau.com/#/site/sitename/home` represents the homepage url for your tableau site, the `sitename` from the url should be entered in the `siteName` field in the config below.
```yaml
source:
  type: tableau
  serviceName: local_tableau
  serviceConnection:
    config:
      type: Tableau
      # For basic authentication
      authType:
        username: username
        password: password
      # For access token authentication
      # authType:
      #   personalAccessTokenName: personal_access_token_name
      #   personalAccessTokenSecret: personal_access_token_secret
      hostPort: http://localhost
      siteName: openmetadata
  sourceConfig:
    config:
      type: DashboardMetadata
      # dbServiceNames:
      #   - service1
      #   - service2
      # dashboardFilterPattern:
      #   includes:
      #     - dashboard1
      #     - dashboard2
      #   excludes:
      #     - dashboard3
      #     - dashboard4
      # chartFilterPattern:
      #   includes:
      #     - chart1
      #     - chart2
      #   excludes:
      #     - chart3
      #     - chart4
sink:
  type: metadata-rest
  config: {}
workflowConfig:
  # loggerLevel: DEBUG  # DEBUG, INFO, WARN or ERROR
  openMetadataServerConfig:
    hostPort: <OpenMetadata host and port>
    authProvider: <OpenMetadata auth provider>
```
## Securing Tableau Connection with SSL in OpenMetadata
To establish secure connections between OpenMetadata and Tableau, in the `YAML` you can provide the CA certificate used for SSL validation by specifying the `caCertificate`. Alternatively, if both client and server require mutual authentication, you'll need to use all three parameters: `ssl key`, `ssl cert`, and `caCertificate`. In this case, `ssl_cert` is used for the client's SSL certificate, `ssl_key` for the private key associated with the SSL certificate, and `caCertificate` for the CA certificate to validate the server's certificate.
```yaml
      sslConfig:
            caCertificate: "/path/to/ca_certificate"
            sslCertificate: "/path/to/your/ssl_cert"
            sslKey: "/path/to/your/ssl_key"
```
<IngestionCli />
